[tool.poetry]
name = "fastapi_entity_auth"
version = "1.0.0"
description = "FastApi Entity Auth"
authors = ["gangstand <ganggstand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyjwt = "^2.8.0"
cryptography = "^41.0.7"


[tool.poetry.dev-dependencies]
ruff = "*"
isort = "*"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
select = ["ALL"]
ignore = ["D1", "D203", "D213", "FA102", "ANN101", "C901", "PLR0913", "RUF012", "B008", "S104", "S105", "BLE001", "D205"]
cache-dir = "/tmp/ruff-cache/"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
lexicographical = true
sections = ["FUTURE", "STDLIB", "FIRSTPARTY", "THIRDPARTY", "LOCALFOLDER"]
no_lines_before = ["STDLIB", "THIRDPARTY"]
known_third_party = []
known_local_folder = []

[toal.ruff.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = ["whole_app"]

